<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">SmartAngler</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Smart Angler</string>
    <string name="nav_header_subtitle">Smarter fishing</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="menu_statistics">Statistics</string>
    <string name="menu_action">Fishing</string>
    <string name="fish_DB">Fish Database</string>

    <string name="num_steps">0</string>
    <string name="goal">Goal: 50</string>
    <string name="progress">0</string>
    <string name="steps">Steps</string>
    <string name="start_text">Start</string>
    <string name="stop_text">Stop</string>
    <string name="acc_sensor_not_available">Acc. sensor not available</string>
    <string name="sensor_not_available">Sensor not available</string>
    <string name="step_detector_sensor_not_available">STEP_DETECTOR sensor not available</string>
    <string name="step_permission_denied">Step permission is denied </string>
    <string name="favorite">Favourite</string>
    <string name="content_description_favorite">Your favourites!</string>
    <string name="settings">Settings</string>
    <string name="content_description_search">You can find the settings here</string>
    <string name="daily_steps">Completed steps today:</string>
    <string name="zero">0</string>
    <string name="today">Today</string>
    <string name="get_all_steps">Get all steps</string>
    <string name="delete_all_steps">Delete all steps</string>
    <string name="take_picture">Take picture</string>

    <!-- Fish data -->
    <string name="perch">Perch</string>
    <string name="perch_description">You can make risotto with this</string>
    <string name="perch_techniques">Dropshot,Spinning</string>
    <string name="perch_baits_and_lures">Creature bait,Shad,Spoon</string>
    <string name="perch_seasons">SUMMER,AUTUMN</string>
    <string name="perch_times_of_day">MORNING,AFTERNOON</string>

    <!--Fish cards-->
    <string name="fish_picture">A picture of a fish</string>

    <!-- Session DB -->
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="insert">Insert</string>
    <string name="load">Load</string>
    <string name="delete">Delete</string>
    <string name="date">Date</string>
    <string name="session">Session Database</string>
    <string name="session_id">Session ID</string>
    <string name="location">Location</string>
    <string name="duration">Duration</string>
    <string name="fish_caught">Fish Caught</string>
    <string name="casts">Casts</string>
    <string name="totalFish">Total Fish Caught: 0</string>
    <string name="totalSessions">Total Sessions: 0</string>
    <string name="totalDuration">Total Duration: 0 minutes</string>
    <string name="totalSteps">Total Steps: 0</string>
    <string name="totalCasts">Total Casts: 0</string>
    <string name="timerZero">00:00</string>
    <string name="photos">Photos</string>
    <string name="close">Close</string>
    <string name="noPhotos">No Photos</string>

    <!-- Fishing fragment   -->
    <string name="steps_counter">Steps: <xliff:g id="steps_number">%d</xliff:g></string>
    <string name="casts_counter">Casts: <xliff:g id="casts_number">%d</xliff:g></string>

    <!-- Analytics -->
    <string name="casting">Casting</string>
    <string name="statistics">Statistics</string>

    <!-- Home fragment   -->
    <string name="home_title">Welcome to SmartAngler</string>
    <string name="refresh_button_desc">Refresh</string>
    <string name="current_season">Current season: <xliff:g id="season">%s</xliff:g></string>
    <string name="current_time_of_day">Current time of day: <xliff:g id="time_of_day">%s</xliff:g></string>
    <string name="current_location">Current location: <xliff:g id="latitude">%f</xliff:g> <xliff:g id="longitude">%f</xliff:g></string>
    <string name="current_location_unknown">Current location unknown</string>
    <string name="location_name">Location name: <xliff:g id="location">%s</xliff:g></string>
    <string name="location_name_unknown">Location name unknown</string>
    <string name="no_fish_likely">Sorry, it looks like you aren\'t likely to find any fish in these conditions</string>

    <string name="fishphoto">fishPhoto</string>
</resources>