<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_svg_icons"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_fishing"
            android:icon="@drawable/fishing_svg_icon"
            android:title="@string/menu_action" />
        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/statistics_graph_svg"
            android:title="@string/menu_statistics" />
        <item
            android:id="@+id/nav_fishDB"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/fish_DB" />

        <item
            android:id="@+id/nav_sessionDB"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/session" />
    </group>
</menu>