<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.smartangler.smartangler.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_fishing"
        android:name="com.smartangler.smartangler.ui.fishing.FishingFragment"
        android:label="@string/menu_action" />

    <fragment
        android:id="@+id/nav_statistics"
        android:name="com.smartangler.smartangler.ui.statistics.StatisticsFragment"
        android:label="@string/menu_statistics" />

    <fragment
        android:id="@+id/nav_fishDB"
        android:name="com.smartangler.smartangler.ui.fishLocationDatabase.FishDBFragment"
        android:label="@string/fish_DB" />
</navigation>